docs(bedrock): add bedrock page content

--- a/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
@@ -180,7 +180,8 @@ export default function App() {
           size: 'medium',
           variant: 'solid',
         },
-        text: 'Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.',
+        text:
+          'Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.',
         textAlign: 'left',
         vAlign: 'center',
       }}
