--- a/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
@@ -4,36 +4,62 @@ sidebar_position: 1
 
 import { Section } from '@kickstartds/base/lib/section';
 import { TeaserBox } from '@kickstartds/base/lib/teaser-box';
+import { TeaserRow } from '@kickstartds/base/lib/teaser-row';
+import { Visual, Storytelling } from '@kickstartds/content';
 
 # Sections
 
 ## Style
 
-Definition style, -> Link Guide "Create your own style variation" (TODO)
+A section style is mainly expressed by the given background color. <br/>
+You should make sure that the chosen background color always offers enough contrast to display various font colors!
 
-`--l-section--background`
+Link Guide "Create your own style variation" (TODO)
+
+<div className="section-background-table">
+
+| Setting   | Token                            | Description                                                                            |
+| --------- | -------------------------------- | -------------------------------------------------------------------------------------- |
+| `default` | `--l-section--background`        | The default background color, shouldnt be percieved as a distinct surface              |
+| `bold`    | `--l-section--background-bold`   | A very prevelant color heavily drawing focus to the displayed content                  |
+| `accent`  | `--l-section--background-accent` | A light color, making it disctinct from the default background without being too heavy |
+
+</div>
 
 ## Frame Width
 
 The `width` propertiy determines the with of the frame the content will be displayed in.
 
-| Setting   | Token                                | Application                                                                   |
-| --------- | ------------------------------------ | ----------------------------------------------------------------------------- |
-| `default` | `--l-section--content-width-default` | The default frame width of content                                            |
-| `narrow`  | `--l-section--content-width-narrow`  | A narrow frame width of content                                               |
-| `wide`    | `--l-section--content-width-wide`    | A wide frame width of content                                                 |
-| `max`     | `--l-section--content-width-max`     | The content will span over the entiere screen                                 |
-| `full`    | `--l-section--content-width-full`    | The content will span over the entiere screen,<br/> without `content-padding` |
+| Setting   | Token                                | Application                                                               |
+| --------- | ------------------------------------ | ------------------------------------------------------------------------- |
+| `default` | `--l-section--content-width-default` | The default frame width                                                   |
+| `narrow`  | `--l-section--content-width-narrow`  | A narrow frame width                                                      |
+| `wide`    | `--l-section--content-width-wide`    | A wide frame width                                                        |
+| `max`     | `--l-section--content-width-max`     | The content spans over the entiere screen                                 |
+| `full`    | `--l-section--content-width-full`    | The content spans over the entiere screen,<br/> without `content-padding` |
+
+#### Screen spanning layouts
+
+For creating full screen layouts there are options of `max` and `full`.<br/>
+They both state that the frame spans over the entire screen.<br/>
+The `max` option still leaves `content-padding` to the left and right browser border.<br/>
+With the `full` option the content will be placed directly against the browser border.
 
 ## Space Before / Space After
 
-Determines how much **vertical** spacing a section has
+Determines how much **vertical** spacing a section has.
 
 | Setting   | Preview                                                       | Token                      | Application                                        |
 | --------- | ------------------------------------------------------------- | -------------------------- | -------------------------------------------------- |
 | `default` | <div className="spacing-preview spacing-section"></div>       | `--l-section--space`       | The default section spacing ensuring an even rythm |
 | `small`   | <div className="spacing-preview spacing-section-small"></div> | `--l-section--space-small` | A smaller space between Sections                   |
 | `none`    |                                                               | ---                        | No space between Sections                          |
+
+#### Combining spacings
+
+By combining the given `spaceAfter`/`spaceBefore` options, it's possible to move sections closer together.<br/>
+That way you can create a visual connection between the content in two sections.<br/>
+You can even make them seem as a single element by removing all spacing between them.
 
 ## Mode
 
@@ -70,11 +96,26 @@ The children will be placed next to each other, in a pre set column width.
 
 The children will be placed on top of each other, stretched across the full section width.
 
-TODO: Which to use when, which tokens influence layout
-
+<Section
+  ks-theme="section-preview"
+  spaceBefore="small"
+  spaceAfter="small"
+  mode="list"
+  width="full"
+>
+  <div className="section-preview--child">Content</div>
+  <div className="section-preview--child">Content</div>
+</Section>
 ## Gutter
 
-The gutter is determined by the token `--l-section_container--gutter` (TBD) <br/>
+TODO: update gutter Token in KickstartDS
+
+| Setting   | Token                       | Application                                                  |
+| --------- | --------------------------- | ------------------------------------------------------------ |
+| `none`    | ---                         | No space between children                                    |
+| `small`   | `--l-section--gutter-small` | A small space between children                               |
+| `default` | `--l-section--gutter`       | The default spacing between children, ensuring an even rythm |
+| `large`   | `--l-section--gutter-large` | A large space between children                               |
 
 #### `none`
 
@@ -131,10 +172,364 @@ The gutter is determined by the token `--l-section_container--gutter` (TBD) <br/
   <div className="section-preview--child">Content</div>
 </Section>
 
-## Grid settings
+## Examples
+
+### List
+
+`mode: list`
+
+<div className="component-preview" >
+  <CH.Preview>
+    <Section
+      mode="list"
+      headline={{
+        styleAs: 'h2',
+        content: 'How can we help you?',
+        align: 'center',
+        spaceAfter: `small`
+      }}
+    >
+      <TeaserRow
+        topic="Generators"
+        image="https://www.kickstartds.com/img/recipes/generator.svg"
+        ratio="none"
+        text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua."
+        link={{
+          variant: 'solid',
+          label: 'Explore generators',
+          iconAfter: false,
+          icon: {
+            icon: 'chevron-right',
+          },
+        }}
+        imageSpacing
+      />
+      <TeaserRow
+        topic="Components"
+        image="https://www.kickstartds.com/img/recipes/toolbox.svg"
+        ratio="none"
+        text="Tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          variant: 'solid',
+          label: 'See our components',
+          iconAfter: false,
+          icon: {
+            icon: 'chevron-right',
+          },
+        }}
+        imageSpacing
+      />
+      <TeaserRow
+        topic="Components"
+        image="https://www.kickstartds.com/img/recipes/toolbox.svg"
+        ratio="none"
+        text="Tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          variant: 'solid',
+          label: 'See our components',
+          iconAfter: false,
+          icon: {
+            icon: 'chevron-right',
+          },
+        }}
+        imageSpacing
+      />
+      <TeaserRow
+        topic="Components"
+        image="https://www.kickstartds.com/img/recipes/toolbox.svg"
+        ratio="none"
+        text="Tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          variant: 'solid',
+          label: 'See our components',
+          iconAfter: false,
+          icon: {
+            icon: 'chevron-right',
+          },
+        }}
+        imageSpacing
+      />
+    </Section>
+
+  </CH.Preview>
+</div>
+
+### Grid
+
+`mode: tile`<br/>
+`--l-section_col--min-width: 14rem`<br/>
+
+<div className="component-preview">
+<CH.Preview>
+  <Section
+    className="content-nav"
+    width="wide"
+    background="accent"
+    mode="tile"
+    headline={{
+      styleAs: 'h2',
+      content: 'Choose your component',
+      align: 'center',
+      spaceAfter: 'small',
+    }}
+  >
+       <TeaserBox
+        topic="Button"
+        image="https://www.kickstartds.com/img/recipes/icons/button.svg"
+        ratio="none"
+        text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "Explore generators",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Content Box"
+        image="https://www.kickstartds.com/img/recipes/icons/content-box.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Count Up"
+        image="https://www.kickstartds.com/img/recipes/icons/count-up.svg"
+        ratio="none"
+        text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Divider"
+        image="https://www.kickstartds.com/img/recipes/icons/divider.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Divider"
+        image="https://www.kickstartds.com/img/recipes/icons/divider.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Headline"
+        image="https://www.kickstartds.com/img/recipes/icons/headline.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Quote Slider"
+        image="https://www.kickstartds.com/img/recipes/icons/quote-slider.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Section"
+        image="https://www.kickstartds.com/img/recipes/icons/section.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Slider"
+        image="https://www.kickstartds.com/img/recipes/icons/slider.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Storytelling"
+        image="https://www.kickstartds.com/img/recipes/icons/storytelling.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Tag Label"
+        image="https://www.kickstartds.com/img/recipes/icons/tag-label.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+      <TeaserBox
+        topic="Text Media"
+        image="https://www.kickstartds.com/img/recipes/icons/text-media.svg"
+        ratio="none"
+        text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+        link={{
+          hidden: true,
+          variant: "clear",
+          label: "See our components",
+
+        }}
+        imageSpacing
+      />
+
+  </Section>
+</CH.Preview>
+</div>
+
+### Full Screen
+
+`mode: tile`<br/>
+`--l-section_col--min-width: 14rem`<br/>
+
+<div className="component-preview">
+  <CH.Preview>
+    <Section width="full" spaceBefore="none" spaceAfter="none">
+      <Storytelling
+        image={{
+          source: 'https://www.kickstartds.com/img/recipes/hero-angled.png',
+          order: {
+            desktopImageLast: true,
+          },
+        }}
+        box={{
+          headline: {
+            level: 'h1',
+            styleAs: 'h1',
+            content: 'We help you overcome digital obstacles',
+            subheadline: 'Autem voluptas quis facere et qui voluptate earum.',
+          },
+          text: `Lorem ipsum dolor sit amet, [consetetur sadipscing](http://example.com/) elitr, sed diam voluptua. At vero eos et accusam et justo duo **dolores et ea rebum.**`,
+          links: [
+            {
+              fillAnimation: false,
+              href: '#',
+              iconAfter: false,
+              iconAnimation: false,
+              iconBefore: false,
+              label: 'Start now',
+              newTab: false,
+              size: 'medium',
+              variant: 'solid',
+            },
+            {
+              href: '#',
+              label: 'Request a demo',
+              variant: 'outline',
+            },
+          ],
+        }}
+        full
+      />
+    </Section>
+  </CH.Preview>
+</div>
+
+## Customisation
+
+Customisation is typically done via `scss` files.<br/>
+The default token are declared on the `.l-section__container` selector and can be overritten there.<br/>
+To increase the selector accuracy, its recommended to wrap them into a `:root` selector.
+
+<CH.Code>
+
+```scss _section-token.scss
+:root,
+[ks-inverted],
+[ks-theme] {
+  .l-section__container {
+    //Adjust background styles
+    --l-section--background: var(--ks-background-fg-alpha-1);
+    --l-section--background-accent: var(--ks-background-primary-to-bg-8);
+    --l-section--background-dark: var(--ks-background-primary-to-bg-2);
+
+    //Adjust vertical spacing
+    --l-section--space: var(--ks-spacing-xl);
+    --l-section--space-small: var(--ks-spacing-m);
+
+    //Adjust gutter spacing
+    --l-section--gutter: var(--ks-spacing-m);
+    --l-section--gutter-small: var(--ks-spacing-s);
+    --l-section--gutter-large: var(--ks-spacing-l);
+
+    //Adjust frame widths
+    --l-section--content-width-wide: 87.5rem;
+    --l-section--content-width-default: 77.5rem;
+    --l-section--content-width-narrow: 62.5rem;
+
+    //Adjust grid settings
+    --l-section_col--min-width: 5rem;
+  }
+}
+```
+
+```scss _section.scss
+@use "./section-tokens";
+```
+
+</CH.Code>
 
 KickstartDS Sections use `CSS Grid`.<br/>
-The child elements will be placed in columns, which are arranged in rows.
+The child elements will be placed in columns, which are arranged in rows.<br/>
+To get deeper into the workings of `CSS Grid` we recommend this article:<br/>
+https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout
 
 The minimum width of a column is determined by `--l-section_col--min-width`.
 
@@ -238,7 +633,3 @@ You can do so by balancing out the `min-width` in correspondence to the set colu
 
 `--l-section_col--repeat: 4` <br/>
 `--l-section_col--min-width: 5rem`
-
-## Children
-
-Which modes + components should be combined? -> Link "Section Examples" (TODO)
