docs: fix kds imports

--- a/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
@@ -5,7 +5,8 @@ sidebar_position: 1
 import { Section } from '@kickstartds/base/lib/section';
 import { TeaserBox } from '@kickstartds/base/lib/teaser-box';
 import { TeaserRow } from '@kickstartds/base/lib/teaser-row';
-import { Visual, Storytelling } from '@kickstartds/content';
+import { Visual } from '@kickstartds/content/lib/visual';
+import { Storytelling } from '@kickstartds/content/lib/storytelling';
 
 # Sections
 
