--- a/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
@@ -5,7 +5,7 @@ sidebar_label: Create Interstitial component
 
 import Admonition from 'react-admonitions';
 
-import { Storytelling } from '@kickstartds/content';
+import { Storytelling } from '@kickstartds/content/lib/storytelling';
 // TODO check why TextMedia doesn't work here, errors with:
 // `Module not found: Error: Package path ./dist/photoswipe-ui-default is not exported from package /home/julrich/Projects/Frontend/code/kickstartDS/node_modules/photoswipe`
 // import { TextMedia } from '@kickstartds/base';
