feat: rename global object from `rm` to `_ks`

--- a/packages/tools/docusaurus/docs/guides/create/storybook.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/storybook.mdx
@@ -1637,7 +1637,7 @@ import IconSprite from "../src/token/icons/IconSprite";
 import "../src/token/tokens.css";
 
 const myActions = actions("radio");
-window.rm.radio.on("*", myActions.radio);
+window._ks.radio.on("*", myActions.radio);
 
 export const parameters = {
   actions: { argTypesRegex: "^on[A-Z].*" },
