docs(foundations): fix CollapsibleBox import

--- a/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
@@ -5,7 +5,7 @@ sidebar_position: 1
 import { Section } from '@kickstartds/base/lib/section';
 import { TeaserBox } from '@kickstartds/base/lib/teaser-box';
 import { TeaserRow } from '@kickstartds/base/lib/teaser-row';
-import { CollapsibleBox } from '@kickstartds/base/lib/collapsible-box';
+import { CollapsibleBox } from '@kickstartds/content/lib/collapsible-box';
 import { Visual } from '@kickstartds/content/lib/visual';
 import { Storytelling } from '@kickstartds/content/lib/storytelling';
 
@@ -550,156 +550,156 @@ TODO: update gutter Token in KickstartDS
     text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
     link={{
       hidden: true,
-      variant: "clear",
-      label: "Explore generators",
+      variant: 'clear',
+      label: 'Explore generators',
     }}
   />
 
-<TeaserBox
-  topic="Content Box"
-  image="https://www.kickstartds.com/img/recipes/icons/content-box.svg"
-  ratio="none"
-  imageSpacing
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Content Box"
+    image="https://www.kickstartds.com/img/recipes/icons/content-box.svg"
+    ratio="none"
+    imageSpacing
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Count Up"
-  image="https://www.kickstartds.com/img/recipes/icons/count-up.svg"
-  ratio="none"
-  imageSpacing
-  text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Count Up"
+    image="https://www.kickstartds.com/img/recipes/icons/count-up.svg"
+    ratio="none"
+    imageSpacing
+    text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr."
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Divider"
-  image="https://www.kickstartds.com/img/recipes/icons/divider.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Divider"
+    image="https://www.kickstartds.com/img/recipes/icons/divider.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Divider"
-  image="https://www.kickstartds.com/img/recipes/icons/divider.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Divider"
+    image="https://www.kickstartds.com/img/recipes/icons/divider.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Headline"
-  image="https://www.kickstartds.com/img/recipes/icons/headline.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Headline"
+    image="https://www.kickstartds.com/img/recipes/icons/headline.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Quote Slider"
-  image="https://www.kickstartds.com/img/recipes/icons/quote-slider.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Quote Slider"
+    image="https://www.kickstartds.com/img/recipes/icons/quote-slider.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Section"
-  image="https://www.kickstartds.com/img/recipes/icons/section.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Section"
+    image="https://www.kickstartds.com/img/recipes/icons/section.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Slider"
-  image="https://www.kickstartds.com/img/recipes/icons/slider.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Slider"
+    image="https://www.kickstartds.com/img/recipes/icons/slider.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Storytelling"
-  image="https://www.kickstartds.com/img/recipes/icons/storytelling.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Storytelling"
+    image="https://www.kickstartds.com/img/recipes/icons/storytelling.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Tag Label"
-  image="https://www.kickstartds.com/img/recipes/icons/tag-label.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
+  <TeaserBox
+    topic="Tag Label"
+    image="https://www.kickstartds.com/img/recipes/icons/tag-label.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 
-<TeaserBox
-  topic="Text Media"
-  image="https://www.kickstartds.com/img/recipes/icons/text-media.svg"
-  ratio="none"
-  text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
-  imageSpacing
-  link={{
-    hidden: true,
-    variant: 'clear',
-    label: 'See our components',
-  }}
-/>
-
+  <TeaserBox
+    topic="Text Media"
+    image="https://www.kickstartds.com/img/recipes/icons/text-media.svg"
+    ratio="none"
+    text="Consetetur sadipscing elitr, sed diam nonumy eirmod."
+    imageSpacing
+    link={{
+      hidden: true,
+      variant: 'clear',
+      label: 'See our components',
+    }}
+  />
 </Section>
 ```
+
 </CH.Code>
 </CollapsibleBox>
 
@@ -840,7 +840,7 @@ To increase the selector accuracy, its recommended to wrap them into a `:root` s
 ```
 
 ```scss _section.scss
-@use "./section-tokens";
+@use './section-tokens';
 ```
 
 </CH.Code>
